--- a/index.html
+++ b/index.html
@@ -6,5 +6,25 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <!-- here hero bg -->
+      <div class="hero_bg_container">
+        <div class="hero_bg">
+          <img class="hero_bg_img" src="./style/assets/Group.png" alt="" />
+          <h1 class="hero_bg_title">
+            "In the near future, I hope to become a Developer."
+          </h1>
+          <p class="hero_bg_text .primary_text">
+            Hello, I’m (name) and I work as a web developer. I have been working
+            as a web developer for quite some time now. I believe I am a very
+            ambitious person who loves to work on making the website work well.
+          </p>
+          <button class="btn_primary">
+            <a class="main_text primary_text">Contact with me</a>
+          </button>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
