section one done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <!-- here hero bg -->
+      <!-- here hero bg start -->
       <div class="hero_bg_container">
         <div class="hero_bg">
           <img class="hero_bg_img" src="./style/assets/Group.png" alt="" />
@@ -25,6 +25,23 @@
           </button>
         </div>
       </div>
+      <!-- here hero bg start -->
     </header>
+    <!-- section start here -->
+    <section>
+      <div class="frame_one">
+        <div class="section_One_container">
+          <div class="section_one_content">
+            <h1 class="section_one_title">Why Web Development??</h1>
+            <p class="section_one_text">
+              Development allows you to improve your skills and knowledge, which
+              can help you become more competent and confident in your personal
+              and professional life.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- section end here -->
   </body>
 </html>
