--- a/index.html
+++ b/index.html
@@ -41,6 +41,24 @@
           </div>
         </div>
       </div>
+      <div>
+        <div class="frame_two">
+          <div>
+            <h1 class="frame_two_title">
+              I will Do Coding and Change The World
+            </h1>
+            <p>
+              Today's digital assistants simplify people's lives by facilitating
+              quick and easy access to information through simple voice
+              commands.
+            </p>
+            <button class="btn_two_main">
+              <a href="" class="btn_two">Learn More</a>
+            </button>
+          </div>
+          <img src="./style/assets/Layer_1.png" alt="" />
+        </div>
+      </div>
     </section>
     <!-- section end here -->
   </body>
