section full done

--- a/index.html
+++ b/index.html
@@ -58,7 +58,26 @@
           </div>
           <img src="./style/assets/Layer_1.png" alt="" />
         </div>
+      
+      <div class="frame_three">
+        <img src="./style/assets/Group 3.png" alt="">
+        <div>
+            <h1 class="frame_two_title">I will help People by creating Modern Web System</h1>
+            <p>With the ability to code, you'll have the power to change the world!</p>
+            <button class="btn_two_main"><a href="" class="btn_two">Learn More</a></button>
+        </div>
+        <div>
+
+        </div>
       </div>
+      <div class="frame_four">
+         <div>
+         <h1 class="frame_two_title">I will Do Coding and Change The World</h1>
+         <p>Coding can create games and other interactive content that teaches people about environmental issues</p>
+         <button class="btn_two_main"><a href="" class="btn_two">Learn More</a></button>
+      </div>
+      <img src="./style/assets/Group 4.png" alt="">
+    </div>
     </section>
     <!-- section end here -->
   </body>
