--- a/index.html
+++ b/index.html
@@ -80,5 +80,14 @@
     </div>
     </section>
     <!-- section end here -->
+     <main>
+        <div class="main_one">
+            <h1>My Inspiration</h1>
+            <q>“You can do what you have to do, and sometimes you can do it even better than you think you can.” - <span>Jimmy Carter.</span></q>
+            <div class="inspire_me">
+            <iframe  width="900" height="400" src="https://www.youtube.com/embed/Tuw8hxrFBH8?si=tV-ZtGWkl3-9ZFOr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        </div>
+     </main>
   </body>
 </html>
