--- a/index.html
+++ b/index.html
@@ -88,6 +88,36 @@
             <iframe  width="900" height="400" src="https://www.youtube.com/embed/Tuw8hxrFBH8?si=tV-ZtGWkl3-9ZFOr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         </div>
+        <div class="main_two">
+            <h1>My Current Target</h1>
+            <p>Consistent Practice and Problem Solving. Consistency is crucial for honing coding skills.</p>
+        </div>
+        <div class="frame_container">
+            <div class="main_frame_one">
+                <div class="main_frame_heading">
+                    <img  src="./style/assets/html.png" alt="">
+                    <h1>HTML</h1>
+                    <p>Hypher text Markup Language</p>
+                    <button class="btn_frame">Learn More</button>
+                </div>
+            </div>
+            <div class="main_frame_two">
+                <div class="main_frame_heading">
+         <img src="./style/assets/css.png" alt="">
+         <h1>CSS</h1>
+         <p>Cascading Style Sheet</p>
+         <button class="btn_frame">Learn More</button>
+                </div>
+            </div>
+            <div class="main_frame_three">
+                <div class="main_frame_heading">
+                    <img src="./style/assets/js.png" alt="">
+                <h1>Javascript</h1>
+                <p> a scripting language to create dynamically updating content.</p>
+                <button class="btn_frame">Learn More</button>
+                </div>
+            </div>
+        </div>
      </main>
   </body>
 </html>
