--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               commands.
             </p>
             <button class="btn_two_main">
-              <a href="" class="btn_two">Learn More</a>
+              <a  href="https://code.org/" target="_blank" class="btn_two" >Learn More</a>
             </button>
           </div>
           <img src="./style/assets/Layer_1.png" alt="" />
@@ -64,7 +64,7 @@
         <div>
             <h1 class="frame_two_title">I will help People by creating Modern Web System</h1>
             <p>With the ability to code, you'll have the power to change the world!</p>
-            <button class="btn_two_main"><a href="" class="btn_two">Learn More</a></button>
+            <button class="btn_two_main"><a href="https://hourofcode.com/us/learn" target="_blank" class="btn_two">Learn More</a></button>
         </div>
         <div>
 
@@ -74,7 +74,7 @@
          <div>
          <h1 class="frame_two_title">I will Do Coding and Change The World</h1>
          <p>Coding can create games and other interactive content that teaches people about environmental issues</p>
-         <button class="btn_two_main"><a href="" class="btn_two">Learn More</a></button>
+         <button class="btn_two_main"><a href="https://codeweek.eu/" target="_blank" class="btn_two">Learn More</a></button>
       </div>
       <img src="./style/assets/Group 4.png" alt="">
     </div>
@@ -98,7 +98,7 @@
                     <img  src="./style/assets/html.png" alt="">
                     <h1>HTML</h1>
                     <p>Hypher text Markup Language</p>
-                    <button class="btn_frame">Learn More</button>
+                    <button class="btn_frame"><a class="link" href="https://html.com/" target="_blank">Learn More</a></button>
                 </div>
             </div>
             <div class="main_frame_two">
@@ -106,15 +106,15 @@
          <img src="./style/assets/css.png" alt="">
          <h1>CSS</h1>
          <p>Cascading Style Sheet</p>
-         <button class="btn_frame">Learn More</button>
+         <button class="btn_frame"><a class="link" href="https://web.dev/learn/css" target="_blank">Learn More</a></button>
                 </div>
             </div>
             <div class="main_frame_three">
                 <div class="main_frame_heading">
                     <img src="./style/assets/js.png" alt="">
-                <h1>Javascript</h1>
+                <h1>JAVASCRIPT</h1>
                 <p> a scripting language to create dynamically updating content.</p>
-                <button class="btn_frame">Learn More</button>
+                <button class="btn_frame"><a class="link" href="https://www.javascript.com/" target="_blank">Learn More</a></button>
                 </div>
             </div>
         </div>
