footer one done

--- a/index.html
+++ b/index.html
@@ -119,5 +119,37 @@
             </div>
         </div>
      </main>
+     <!-- footer start here -->
+     <footer >
+        <div class="target">
+            <h1>My Next Target</h1>
+            <p>passion for learning new things and keeping up with the latest trends and technologies in the industry.</p>
+        </div>
+        <div class="react_framework">
+            <img src="./style/assets/react.png" alt="">
+               <div class="react_content" >
+                <h1>ReactJS</h1>
+                <p class="primary_text"> React JS is one of the robust technologies that are highly popular and in demand for web app development.React JS is an open-source library used for mobile and web development. It enables developers to build reliable, fast, and scalable web applications. </p>
+                <button class="btn_frame "> <a class="link" href="https://graffersid.com/what-is-react-js-used-for/#:~:text=React%20JS%20is%20one%20of,fast%2C%20and%20scalable%20web%20applications." target="_blank">Learn More</a></button>
+            </div>
+        </div>
+        <div class="react_framework">
+            <img src="./style/assets/nodejs.png" alt="">
+            <div class="react_content">
+                <h1>NodeJs</h1>
+                <p class="primary_text">Node.js® is a free, open-source, cross-platform JavaScript runtime environment that lets developers create servers, web apps, command line tools and scripts.</p>
+                <button class="btn_frame "><a class="link" href="https://nodejs.org/en" target="_blank">Learn More</a></button>
+            </div>
+        </div>
+        <div class="react_framework">
+            <img src="./style/assets/mongodb.png" alt="">
+            <div class="react_content">
+                <h1>MongoDB</h1>
+                <p class="primary_text"> it makes it easy for developers to store, manage, and retrieve data when creating applications with most programming languages.</p>
+                <button class="btn_frame "><a class="link" href="https://www.mongodb.com/"Target="_blank"></a></button>
+            </div>
+        </div>
+     </footer>
+     <!-- footer end here -->
   </body>
 </html>
