--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h1>My Inspiration</h1>
             <q>“You can do what you have to do, and sometimes you can do it even better than you think you can.” - <span>Jimmy Carter.</span></q>
             <div class="inspire_me">
-            <iframe  width="900" height="400" src="https://www.youtube.com/embed/Tuw8hxrFBH8?si=tV-ZtGWkl3-9ZFOr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe class="inspire_me_inside" width="900" height="400"  src="https://www.youtube.com/embed/Tuw8hxrFBH8?si=tV-ZtGWkl3-9ZFOr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         </div>
         <div class="main_two">
@@ -121,6 +121,7 @@
      </main>
      <!-- footer start here -->
      <footer >
+        <div class="footer_content">
         <div class="target">
             <h1>My Next Target</h1>
             <p>passion for learning new things and keeping up with the latest trends and technologies in the industry.</p>
@@ -145,10 +146,11 @@
             <img src="./style/assets/mongodb.png" alt="">
             <div class="react_content">
                 <h1>MongoDB</h1>
-                <p class="primary_text"> it makes it easy for developers to store, manage, and retrieve data when creating applications with most programming languages.</p>
-                <button class="btn_frame "><a class="link" href="https://www.mongodb.com/"Target="_blank"></a></button>
+                <p class="primary_text"> it makes it easy for developers to store, manage, and retrieve data when creating applications with most programming languages. The distributed nature of MongoDB gives a major performance boost.</p>
+                <button class="btn_frame "><a class="link" href="https://www.mongodb.com/"Target="_blank">Learn More</a></button>
             </div>
         </div>
+    </div>
      </footer>
      <!-- footer end here -->
   </body>
