--- a/index.html
+++ b/index.html
@@ -151,6 +151,18 @@
             </div>
         </div>
     </div>
+    <section class="footer_final">
+        <div class="div_final">
+        <h1>I need Support</h1>
+        <p>You Can Text Me Everyday,Also Drop Message And Cool Free Moment</p>
+        <div class="footer_input_last">
+            <form action="">
+        <input class="footer_input" type="text"  name="" id="" placeholder="Suggest me any feedback for me">
+        <button class="btn_footer" type="Submit">Submit</button>
+    </form>
+    </div>
+    </div>
+    </section>
      </footer>
      <!-- footer end here -->
   </body>
