--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             ambitious person who loves to work on making the website work well.
           </p>
           <button class="btn_primary">
-            <a class="main_text primary_text">Contact with me</a>
+            <a class="main_text primary_text" href="#final">Contact with me</a>
           </button>
         </div>
       </div>
@@ -151,14 +151,14 @@
             </div>
         </div>
     </div>
-    <section class="footer_final">
-        <div class="div_final">
+    <section class="footer_final" >
+        <div class="div_final" id="final">
         <h1>I need Support</h1>
         <p>You Can Text Me Everyday,Also Drop Message And Cool Free Moment</p>
         <div class="footer_input_last">
             <form action="">
         <input class="footer_input" type="text"  name="" id="" placeholder="Suggest me any feedback for me">
-        <button class="btn_footer" type="Submit">Submit</button>
+        <button class="btn_footer" type="Submit"><a  href="">Submit</a></button>
     </form>
     </div>
     </div>
