--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
             <h1>My Next Target</h1>
             <p>passion for learning new things and keeping up with the latest trends and technologies in the industry.</p>
         </div>
+        <div class="solution_one">
         <div class="react_framework">
             <img src="./style/assets/react.png" alt="">
                <div class="react_content" >
@@ -150,7 +151,9 @@
                 <button class="btn_frame "><a class="link" href="https://www.mongodb.com/"Target="_blank">Learn More</a></button>
             </div>
         </div>
+        </div>
     </div>
+    <div class="solution_one">
     <section class="footer_final" >
         <div class="div_final" id="final">
         <h1>I need Support</h1>
@@ -163,6 +166,7 @@
     </div>
     </div>
     </section>
+</div>
      </footer>
      <!-- footer end here -->
   </body>
