--- a/index.html
+++ b/index.html
@@ -167,6 +167,14 @@
     </div>
     </section>
 </div>
+<div class="last_one ">
+    <h1>An Open Commitment by Mohammad Irfanul Islam</h1>
+    <div class="icon_last">
+        <a href="https://www.facebook.com/programmingHero/" target="_blank"> <img src="./style/assets/facebook.png" alt=""></a>
+        <a href="https://github.com/ProgrammingHero1" target="_blank"> <img src="./style/assets/github.png" alt=""></a>
+        <a href="https://bd.linkedin.com/company/programminghero" target="_blank"> <img src="./style/assets/linkedin-icon 1.png" alt=""></a>
+    </div>
+</div>
      </footer>
      <!-- footer end here -->
   </body>
